--- a/Marlin/Views/Main/ScriptPage.xaml
+++ b/Marlin/Views/Main/ScriptPage.xaml
@@ -35,7 +35,7 @@
                        Margin="5"
                        FontWeight="Bold"
                        Padding="30,0"
-                       Text="Скрипт"/>
+                       Text="Новый скрипт"/>
 
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
