--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -629,7 +629,8 @@
                 </ScrollViewer>
             </Grid>
 
-            <Grid Grid.Row="2">
+            <Grid Grid.Row="2"
+                  Margin="25,0,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="auto"/>
