--- a/Marlin/Views/Main/ScriptPage.xaml
+++ b/Marlin/Views/Main/ScriptPage.xaml
@@ -28,7 +28,8 @@
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Background="Transparent"
+            <TextBlock Grid.Row="0"
+                       Background="Transparent"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        FontSize="30"
@@ -37,10 +38,20 @@
                        Padding="30,0"
                        Text="Новый скрипт"/>
 
-            <Grid Grid.Row="2">
+            <Border Grid.Row="1"
+                    Margin="50,0"
+                    CornerRadius="25"
+                    Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                    BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                    BorderThickness="2">
+                
+            </Border>
+
+                <Grid Grid.Row="2"
+                  Margin="25,0,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
 
                 <Button Grid.Column="0"
