--- a/Marlin/Views/Main/ScriptPage.xaml
+++ b/Marlin/Views/Main/ScriptPage.xaml
@@ -36,7 +36,7 @@
                        Margin="5"
                        FontWeight="Bold"
                        Padding="30,0"
-                       Text="Новый скрипт"/>
+                       Text="{Binding Path=PageTitle}"/>
 
             <Border Grid.Row="1"
                     Margin="50,0"
@@ -44,7 +44,131 @@
                     Background="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                     BorderBrush="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                     BorderThickness="2">
-                
+
+                <ScrollViewer VerticalScrollBarVisibility="Hidden">
+                    <Grid Margin="10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height ="auto"/>
+                            <RowDefinition Height ="auto"/>
+                            <RowDefinition Height ="auto"/>
+                            <RowDefinition Height ="auto"/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Grid.Row="0"
+                              Margin="0,0,0,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0"
+                                       Margin="10,0"
+                                       FontSize="20"
+                                       VerticalAlignment="Top"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                       Text="Основное:"/>
+
+                            <Grid Grid.Column="1"
+                                  Margin="0,4,0,0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock Grid.Column="0"  
+                                           Margin="0,0,10,0"
+                                           FontSize="15"
+                                           VerticalAlignment="Center"
+                                           Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
+                                           Text="Название скрипта"/>
+
+                                <TextBox Grid.Column="1"
+                                         MinWidth="100"
+                                         FontSize="15"
+                                         Padding="10,0"
+                                         MaxLength="100"
+                                         HorizontalContentAlignment="Center"
+                                         VerticalAlignment="Center"
+                                         Text="{Binding Path=Title,UpdateSourceTrigger=PropertyChanged}"/>
+                            </Grid>
+                        </Grid>
+
+                        <Grid Grid.Row="1"
+                              Margin="0,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0"
+                                       Margin="10,0"
+                                       FontSize="20"
+                                       VerticalAlignment="Top"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                       Text="Действие:"/>
+
+                            
+                        </Grid>
+
+                        <Grid Grid.Row="2"
+                              Margin="0,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0"
+                                       FontSize="20"
+                                       Margin="10,5,10,0"
+                                       VerticalAlignment="Top"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                       Text="Взаимодействие:"/>
+
+                            <Grid Grid.Column="1"
+                                  Margin="0,10,0,5">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+
+                                <TextBlock Grid.Column="0"  
+                                               FontSize="15"
+                                               Margin="0,0,10,0"
+                                               Foreground="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
+                                               Text="Защитить паролем"/>
+
+                                <CheckBox Grid.Column="1"
+                                          IsChecked="{Binding Path=Checkpuss,UpdateSourceTrigger=PropertyChanged}"/>
+                            </Grid>
+                        </Grid>
+
+                        <Grid Grid.Row="3">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0"
+                                       FontSize="20"
+                                       Margin="10"
+                                       VerticalAlignment="Top"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                       Text="Описание:"/>
+
+                            <TextBox Grid.Column="1"
+                                     FontSize="15"
+                                     MinWidth="100"
+                                     Padding="10,15,10,5"
+                                     TextWrapping="Wrap"
+                                     Text="{Binding Path=Comment,UpdateSourceTrigger=PropertyChanged}"/>
+                        </Grid>
+                    </Grid>
+                </ScrollViewer>
+
             </Border>
 
                 <Grid Grid.Row="2"
@@ -66,7 +190,7 @@
                         Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Button Grid.Column="1"
-                        Content="Сохранить"
+                        Content="{Binding Path=ButtonContent}"
                         FontSize="15"
                         FontWeight="Bold"
                         Margin="5,10,50,10" 
@@ -74,7 +198,7 @@
                         BorderBrush="Transparent"
                         Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                         Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
-                        Command="{Binding Path=SaveSettingsCommand}"/>
+                        Command="{Binding Path=ButtonActionCommand}"/>
             </Grid>
         </Grid>
     </Grid>
