Начата реализация добавления действий к скрипту

--- a/Marlin/Views/Main/ActionsPage.xaml
+++ b/Marlin/Views/Main/ActionsPage.xaml
@@ -125,7 +125,7 @@
                                            FontSize="15"
                                            Padding="10"
                                            HorizontalAlignment="Stretch"
-                                           TextWrapping="WrapWithOverflow"/>
+                                           TextWrapping="Wrap"/>
                             </ScrollViewer>
                         </Grid>
                     </Border>
