--- a/Marlin/Views/Main/ScriptPage.xaml
+++ b/Marlin/Views/Main/ScriptPage.xaml
@@ -52,6 +52,7 @@
                             <RowDefinition Height ="auto"/>
                             <RowDefinition Height ="auto"/>
                             <RowDefinition Height ="auto"/>
+                            <RowDefinition Height ="auto"/>
                         </Grid.RowDefinitions>
 
                         <Grid Grid.Row="0"
@@ -179,7 +180,99 @@
                             </Grid>
                         </Grid>
 
-                        <Grid Grid.Row="3">
+                        <Grid Grid.Row="3"
+                              Margin="0,10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBlock Grid.Column="0"
+                                       FontSize="20"
+                                       Margin="10,5,10,0"
+                                       VerticalAlignment="Top"
+                                       FontWeight="Bold"
+                                       Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                       Text="Триггеры:"/>
+
+                            <Grid Grid.Column="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height ="auto"/>
+                                    <RowDefinition Height ="auto"/>
+                                </Grid.RowDefinitions>
+
+                                <Grid Grid.Row="0">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="auto"/>
+                                        <ColumnDefinition Width="{Binding Path=MarlinTrigger,UpdateSourceTrigger=PropertyChanged}"/>
+                                        <ColumnDefinition Width="auto"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <ComboBox Grid.Column="0"
+                                              FontSize="15"
+                                              MaxWidth="400"
+                                              SelectedIndex="0"
+                                              Margin="0,4,10,0"
+                                              SelectedValue="{Binding Path=SelectedTrigger,UpdateSourceTrigger=PropertyChanged}"
+                                              ItemsSource="{Binding Path=Triggers,UpdateSourceTrigger=PropertyChanged}"
+                                              HorizontalContentAlignment="Center"/>
+
+                                    <Grid Grid.Column="1">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height ="{Binding Path=TextTriggerLength,UpdateSourceTrigger=PropertyChanged}"/>
+                                            <RowDefinition Height ="{Binding Path=AppTriggerLength,UpdateSourceTrigger=PropertyChanged}"/>
+                                        </Grid.RowDefinitions>
+
+                                        <TextBox Grid.Row="0"
+                                                 FontSize="15"
+                                                 Padding="10,0"
+                                                 Margin="0,13,10,0"
+                                                 Text="{Binding Path=TextTrigger,UpdateSourceTrigger=PropertyChanged}"
+                                                 MaxWidth="350"/>
+
+                                        <Grid Grid.Row="1">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="auto"/>
+                                                <ColumnDefinition Width="auto"/>
+                                            </Grid.ColumnDefinitions>
+
+                                            <Button Grid.Column="0"
+                                                    BorderThickness="0"
+                                                    Margin="0,0,10,0"
+                                                    BorderBrush="Transparent"
+                                                    Command="{Binding Path=AppTriggerCommand}"
+                                                    Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                                    Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
+                                                    Content="Выбрать программу"/>
+
+                                            <TextBlock Grid.Column="1"
+                                                       Margin="0,0,10,0"
+                                                       FontSize="15"
+                                                       VerticalAlignment="Center"
+                                                       HorizontalAlignment="Center"
+                                                       Padding="10,0"
+                                                       Text="{Binding Path=AppTrigger,UpdateSourceTrigger=PropertyChanged}"
+                                                       MaxWidth="300"/>
+                                        </Grid>
+                                    </Grid>
+
+                                    <Button Grid.Column="2"
+                                            Content="Добавить"
+                                            Command="{Binding Path=AddTriggerCommand,UpdateSourceTrigger=PropertyChanged}"
+                                            BorderThickness="0"
+                                            BorderBrush="Transparent"
+                                            Foreground="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
+                                            Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"/>
+                                </Grid>
+
+                                <ScrollContentPresenter Grid.Row="1"
+                                                        HorizontalAlignment="Left"
+                                                        Margin="0,0,0,10"
+                                                        Content="{Binding Path=TriggerPanel,UpdateSourceTrigger=PropertyChanged}"/>
+                            </Grid>
+                        </Grid>
+
+                        <Grid Grid.Row="4">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="*"/>
